--- a/apps/foilsigh/assets/css/components/essays/replies.scss
+++ b/apps/foilsigh/assets/css/components/essays/replies.scss
@@ -28,6 +28,10 @@
   flex-direction: column;
 }
 
+h3 + .reply {
+  --flow-space: 0;
+}
+
 //
 // Header/meta info container
 // -----------------------------------------------------------------------------------------------
